gnome-desktop3 (3.4.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/patches/01-clock_gettime.patch: Removed, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Tue, 03 Apr 2012 19:23:55 +0200

gnome-desktop3 (3.2.1-4) unstable; urgency=low

  * Build system-wide help documents and install them in gnome-desktop3-data.
  * Add the necessary Breaks/Replaces against gnome-desktop-data (<< 2.32.1-2)
    which previously shipped those files.
  * Build gtk-doc API documentation.
  * debian/patches/01-clock_gettime.patch: Link libgnome-desktop against librt
    for clock_gettime().
  * Use dh-autoreconf to update the build system.
  * Update debian/copyright using the machine-readable copyright format 1.0.
  * Bump Standards-Version to 3.9.3.
  * Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer.

 -- Michael Biebl <biebl@debian.org>  Tue, 03 Apr 2012 19:17:35 +0200

gnome-desktop3 (3.2.1-3) unstable; urgency=low

  * Upload to unstable.
  * debian/control.in:
    - Tighten dependency on gnome-desktop3-data again.
    - Change section of gir1.2-gnomedesktop-3.0 to introspection.

 -- Michael Biebl <biebl@debian.org>  Wed, 07 Dec 2011 05:58:38 +0100

gnome-desktop3 (3.2.1-2) experimental; urgency=low

  * debian/control.in:
    - Loosen the dependency on gnome-desktop-data for now such that
      libgnome-desktop-3-2 is installable in parallel with
      libgnome-desktop-3-0

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 27 Oct 2011 11:30:24 +0200

gnome-desktop3 (3.2.1-1) experimental; urgency=low

  * New upstream release.
    - Link against -lm for sqrt. Closes: #640437
  * debian/watch:
    - Update to version 3.
    - Track .xz tarballs.
  * debian/control.in:
    - Use Section: libs for gir1.2-gnomedesktop-3.0.
    - Drop (Build-)Depends on libstartup-notification0-dev.
    - Add Build-Depends on libxext-dev.
    - Update Vcs-* URLs.
    - Bump Build-Depends on intltool to (>= 0.40.6).
  * debian/rules:
    - List missing files.