@@ -18,10 +18,10 @@ Build-Depends: debhelper (>= 8),
                docbook-xml,
                gnome-doc-utils (>= 0.3.2),
                libx11-dev,
-               libxrandr-dev (>= 1.2),
+               libxrandr-dev (>= 1.3),
                libxext-dev,
                libgdk-pixbuf2.0-dev (>= 2.21.3),
-               libgtk-3-dev (>= 3.0.0),
+               libgtk-3-dev (>= 3.3.6),
                libxml2-dev (>= 2.4.20),
                libglib2.0-doc,
                libgtk-3-doc,
@@ -55,7 +55,7 @@ Architecture: any
 Depends: ${misc:Depends},
          libgnome-desktop-3-2 (= ${binary:Version}),
          gir1.2-gnomedesktop-3.0 (= ${binary:Version}),
-         libgtk-3-dev (>= 3.0.0),
+         libgtk-3-dev (>= 3.3.6),
          gsettings-desktop-schemas-dev
 Description: Utility library for loading .desktop files - development files
  This package provides the include files and static library for the GNOME
