@@ -2,8 +2,10 @@ gnome-desktop3 (3.4.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * debian/patches/01-clock_gettime.patch: Removed, merged upstream.
+  * Bump (Build-)Depends on libgtk-3-dev to (>= 3.3.6).
+  * Bump Build-Depends on libxrandr-dev to (>= 1.3).
 
- -- Michael Biebl <biebl@debian.org>  Tue, 03 Apr 2012 19:23:55 +0200
+ -- Michael Biebl <biebl@debian.org>  Tue, 03 Apr 2012 19:27:10 +0200
 
 gnome-desktop3 (3.2.1-4) unstable; urgency=low
 
